# p2p-file-system

./: Cargo.toml  README.md  file.p2p  image.p2p  run_nodes.sh
config/: config.txt  topologia.txt
files/crazy-emoji.jpeg-chunks/: crazy-emoji.jpeg.ch2  crazy-emoji.jpeg.ch4
nodes/1/: crazy-emoji.jpeg.ch0  crazy-emoji.jpeg.ch1
nodes/4/: crazy-emoji.jpeg.ch3
src/: main.rs
src/dto/: chunk_data.rs  chunker.rs  descritor.rs  message.rs  metadata_parser.rs  mod.rs  node.rs  request_answer.rs
src/server_service/: file_utils.rs  mod.rs  tcp_node_service.rs  udp_listener.rs  udp_node_service.rs
tests/: chunker.rs  node.rs
