[package]
name = "p2p-file-system"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = "0.4"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"

# Optional servers and clients
#[[bin]]
#name = "server"
#path = "src/bin/server.rs"

#[[bin]]
#name = "client"
#path = "src/bin/client.rs"

[lib]
name = "p2p_file_system"
path = "src/main.rs"
