[package]
name = "p2p-file-system"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = "0.5.7"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.3"
rand = "0.8"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "2.0.0-rc.3"



[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "create-chunks"
path = "src/bin/create_chunks.rs"

# Optional servers and clients
#[[bin]]
#name = "server"
#path = "src/bin/server.rs"

#[[bin]]
#name = "client"
#path = "src/bin/client.rs"

[lib]
name = "p2p_file_system"
path = "src/main.rs"
